# simplified_cabal_example

./: ReadMe.md  default.nix  example.cabal
src/: Main.hs
test/: MainSpec.hs
