name:                example
version:             0.1.0.0
synopsis:            Example showing error
homepage:            https://example.jonoabroad.com
license:             AllRightsReserved
license-file:        LICENSE
author:              Jonathan Ferguson
maintainer:          jono@underscore.io
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
executable example
  main-is:             Main.hs
  other-modules:
  build-depends:       
    base              
  hs-source-dirs:  src
  default-language:    Haskell2010
test-suite spec
  type: exitcode-stdio-1.0
  main-is: MainSpec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base
    , example
    , hspec
  other-modules:
      MainSpec
  default-language:    Haskell2010      


