name:          example
version:       0.0.0
author:        Jonathan Ferguson
maintainer:    jono@underscore.io
license:       MIT
license-file:  LICENSE
build-type:    Simple
cabal-version: >=1.10

executable example
  hs-source-dirs:      src
  build-depends:       base              
  main-is:             Main.hs
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             MainSpec.hs
  hs-source-dirs:      test 
  build-depends:
                       base
                     , hspec
  default-language:    Haskell2010